--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-#root {
-  margin: 0 auto;
-  padding: 16px;
+.header {
+  height: 200px;
+  background: var(--gray-700);
+  display: flex;
+  justify-content: center;
 }
 
-body {
-  margin: 0;
+.logo {
   display: flex;
-  place-items: center;
+  align-items: center;
+  gap: 12px;
 }
