--- a/src/components/Tasks.css
+++ b/src/components/Tasks.css
@@ -9,3 +9,13 @@
 input {
   width: 663px;
 }
+
+.list {
+  margin-top: 25px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+}
