--- a/src/components/Tasks.css
+++ b/src/components/Tasks.css
@@ -1,21 +1,22 @@
+.tasksContent {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .form {
   margin-top: -30px;
-  width: 100%;
   display: flex;
   justify-content: center;
   gap: 8px;
 }
 
-input {
-  width: 663px;
+.form input {
+  width: 100%;
 }
 
 .list {
-  margin-top: 25px;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 12px;
 }
