conclusao de tasks e contagem das mesmas

--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -11,3 +11,8 @@
   background: var(--gray-500, #262626);
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06);
 }
+
+.titleChecked {
+  text-decoration: line-through;
+  color: var(--gray-300);
+}
